import org.apache.tools.ant.filters.ReplaceTokens

buildscript {
    dependencies {
        classpath group: 'gradle.plugin.com.github.jengelman.gradle.plugins', name: 'shadow', version: '7.0.0'
    }
}

plugins {
    id 'architectury-plugin' version "$architectury_version"
    id 'dev.architectury.loom' version "$architectury_loom_version" apply false
}

architectury {
    minecraft = mc_version
}

subprojects {
    apply plugin: 'architectury-plugin'
    apply plugin: 'dev.architectury.loom'

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "com.mojang:minecraft:$mc_version"
        mappings loom.officialMojangMappings()
    }
}

allprojects {
    apply plugin: 'com.github.johnrengelman.shadow'
    apply plugin: 'java'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    version = mod_version

    repositories {
        // More convenient access to CF mods.
        maven { url = 'http://www.cursemaven.com'; allowInsecureProtocol = true }
        maven { url 'https://maven.architectury.dev' }
        mavenCentral()
    }

    configurations {
        bundle { transitive = false }
        implementation.extendsFrom bundle
    }

    dependencies {
        compileOnly group: 'org.jetbrains', name: 'annotations', version: '16.0.2'
        compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
        compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'

        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.22'

        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
        testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
    }

    task processSource(type: Sync) {
        from sourceSets.main.java
        inputs.properties(mod_version: mod_version, mod_id: mod_id, mod_name: mod_name)
        filesMatching(['**/Reference.java']) {
            filter(ReplaceTokens, tokens: [MOD_VERSION: mod_version, MOD_ID: mod_id, MOD_NAME: mod_name])
        }
        into "$buildDir/src"
    }

    compileJava {
        source = processSource.outputs
        options.compilerArgs << '-parameters'
    }

    jar {
        archivesBaseName = "$archive_base-$platform"
    }

    shadowJar {
        configurations = [project.configurations.bundle]
        classifier = ''
    }

    build.dependsOn shadowJar

    tasks.withType(Test) {
        useJUnitPlatform()
        ignoreFailures = false
        failFast = true
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}
